// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: color variants: should render JobStreet callToAction button 1`] = `
<button
  aria-pressed={false}
  className="root jobStreet root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render JobsDB callToAction button 1`] = `
<button
  aria-pressed={false}
  className="root jobsDB root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render callToAction button 1`] = `
<button
  aria-pressed={false}
  className="root root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render hyperlink color button 1`] = `
<button
  aria-pressed={false}
  className="root root_hyperlink"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render primary button 1`] = `
<button
  aria-pressed={false}
  className="root root_primary"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: color variants: should render secondary button 1`] = `
<button
  aria-pressed={false}
  className="root root_secondary"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: should render as an anchor with href="https://www.seek.com.au" 1`] = `
<a
  aria-pressed={false}
  className="root root_hyperlink"
  href="https://www.seek.com.au"
  role="button"
  tabindex={0}
>
  SEEK
</a>
`;

exports[`Button: should render as div 1`] = `
<div
  aria-pressed={false}
  className="root root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</div>
`;

exports[`Button: should render compact font size 1`] = `
<button
  aria-pressed={false}
  className="root compact root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: should render custom component based on it’s reference 1`] = `
<CustomComponent
  aria-pressed={false}
  className="root root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</CustomComponent>
`;

exports[`Button: should render disabled 1`] = `
<button
  aria-pressed={false}
  className="root disabled root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: should render with array of nodes 1`] = `
<button
  aria-pressed={false}
  className="root root_callToAction"
  role="button"
  tabindex={0}
>
  <span>
    SEEK
  </span>
  <span>
    AU
  </span>
</button>
`;

exports[`Button: should render with className 1`] = `
<button
  aria-pressed={false}
  className="root foo root_callToAction"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: should render with isSelected style 1`] = `
<button
  aria-pressed={false}
  className="root root_callToAction selected"
  role="button"
  tabindex={0}
>
  SEEK
</button>
`;

exports[`Button: should render with node 1`] = `
<button
  aria-pressed={false}
  className="root root_callToAction"
  role="button"
  tabindex={0}
>
  <h5>
    SEEK
  </h5>
</button>
`;
